force-app/main/default/objects/Program_Enrollment__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <description>The date the student was admitted to the Program.</description>
    <inlineHelpText>The date the student was admitted to the Program.</inlineHelpText>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>