force-app/main/default/objects/Program_Enrollment__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is auto-populated with the Affiliation record that represents the student&apos;s enrollment in this Program.</description>
    <inlineHelpText>This field is auto-populated with the Affiliation record that represents the student&apos;s enrollment in this Program.</inlineHelpText>
    <label>Affiliation</label>
    <referenceTo>Affiliation__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>