force-app/main/default/objects/Program_Enrollment__c/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <description>The date the student applied for admission to the Program.</description>
    <inlineHelpText>The date the student applied for admission to the Program.</inlineHelpText>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>