force-app/main/default/objects/Program_Enrollment__c/fields/Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Credits_Attempted__c</fullName>
    <description>The number of credits the student has tried to complete to date. This includes credits in progress and failed courses for which no credit was received.</description>
    <inlineHelpText>The number of credits the student has tried to complete to date. This includes credits in progress and failed courses for which no credit was received.</inlineHelpText>
    <label>Credits Attempted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>