force-app/main/default/objects/Program_Enrollment__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <description>The number of credits the student has successfully completed to date.</description>
    <inlineHelpText>The number of credits the student has successfully completed to date.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>