force-app/main/default/objects/Program_Enrollment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the student is scheduled to complete the Program.</description>
    <inlineHelpText>The date the student is scheduled to complete the Program.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>