force-app/main/default/objects/Program_Enrollment__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <description>The student&apos;s current grade point average.</description>
    <inlineHelpText>The student&apos;s current grade point average.</inlineHelpText>
    <label>GPA</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>