force-app/main/default/objects/Program_Enrollment__c/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <description>The year the student is expected to graduate from this Program.</description>
    <inlineHelpText>The year the student is expected to graduate from this Program.</inlineHelpText>
    <label>Class Year</label>
    <length>250</length>
    <type>Text</type>
</CustomField>