force-app/main/default/objects/Program_Enrollment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the student started, or is expected to start, this Program.</description>
    <inlineHelpText>The date the student started, or is expected to start, this Program.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>