force-app/main/default/objects/Program_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Class_Standing__c</columns>
    <columns>Graduation_Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>GPA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>